# occt-drawplugin

./: CMakeLists.txt  LICENSE  main.cxx  myDrawPlugin  readme.md
